fixed overflow issue with dragging

--- a/dressapp/app/assets/stylesheets/suitcases.scss
+++ b/dressapp/app/assets/stylesheets/suitcases.scss
@@ -247,9 +247,6 @@ h4 {
 }
 
 // styling for "add more items" in the suitcase show side nav
-#sortable2 {
-  max-width: 100%;
-}
 
 #items-grid-container img {
   width: 100px;
